# cpp_starter_project

./: .clang-tidy  CMakeLists.txt  README.md  dependencies.cmake
.github/workflows/: cmake.yml  cmake.yml.example
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_example.cpp  tests.cpp
